<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wi-Fi Direct</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Open Camera</string>
    <string name="group_info_button">Group Info</string>
    <string name="back_button">Back</string>
    <string name="empty"></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="client_text">This device will act as a client</string>
    <string name="server_text">This device will act as a server</string>
    <string name="empty_message">No devices found.</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">Status</string>
    <string name="label_peers">Peers</string>
    <string name="app_description">An application for Wi-Fi Direct connectivity</string>
    <string name="group_owner_switch">Group Owner</string>
    <string name="switch_camera_switch">View</string>
    <string name="take_picture_btn">Take Photo</string>
</resources>