<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/details_view"
    android:visibility="gone">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <Button
		                android:id="@+id/btn_connect"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/connect_peer_button" />
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <Button
		                android:id="@+id/btn_disconnect"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/disconnect_peer_button"
		                android:visibility="gone" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <Button
		                android:id="@+id/btn_start_client"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/get_file_button"
		                android:visibility="gone" />
                    <Switch
                        android:id="@+id/swich_camera_switch"
                        android:layout_marginLeft="20dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/switch_camera_switch"
                        android:textOff="Back"
                        android:textOn="Front" />

                </TableRow>
                <TableRow 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <Button 
                        android:id="@+id/btn_take_picture"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/take_picture_btn"
		                android:visibility="gone" />
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <Button 
		                android:id="@+id/btn_group_info"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/group_info_button"
		                android:visibility="gone" />
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <Button 
		                android:id="@+id/btn_back"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/back_button"
		                android:visibility="gone" />
                </TableRow>
			</TableLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/detail_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
	            android:id="@+id/device_address"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:id="@+id/device_info"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:id="@+id/group_owner"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:id="@+id/group_ip"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/group_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
        	<TextView 
	            android:id="@+id/interface_name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
        	<TextView 
        	    android:id="@+id/network_name"
        	    android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
            <TextView 
        	    android:id="@+id/go_ip_address"
        	    android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
        	<TextView 
        	    android:id="@+id/is_go"
        	    android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
        	<TextView 
        	    android:id="@+id/clients"
        	    android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
        	<TextView 
        	    android:id="@+id/passfrase"
        	    android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/status_bar"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_height="50dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/background_dark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:id="@+id/status_text">
        </TextView>
    </LinearLayout>
</FrameLayout>